Adjusted project proposal

--- a/project proposal.ipynb
+++ b/project proposal.ipynb
@@ -4,11 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Project Group - \n",
+    "# Project Group - 28\n",
     "\n",
     "Members: Joris Voogt, Xiaoyu Mao, Yuwen Peng\n",
     "\n",
-    "Student numbers: (Joris Voogt), 5947642, 5914507"
+    "Student numbers: 4295978, 5947642, 5914507"
    ]
   },
   {
@@ -19,20 +19,27 @@
     "\n",
     "*Requires data modeling and quantitative research in Transport, Infrastructure & Logistics*\n",
     "\n",
-    "This research would focus on the passenger transport trends and safety problem in the Europe. Discuss the relationships between transport mode choices and transport economy of different countries. Then derive insights into analyzing whether the economic resources invested in roads have any influence on transport safety. \n",
+    "RQ: Influence of GDP on road and rail passenger transportation modes and their safety in Europe.\n",
     "\n",
-    "1.\tThe data of Volume of passenger transport relative to GDP can help understand the relative scale of passenger transport in the national economy. Also help to analysis the growth of transportation demand in decades. Create an interactive map of Europe with different colors for each country based on the data, representing levels of the Volume of passenger transport relative to GDP.\n",
+    "This research would focus on the passenger transport trends and safety problems in Europe. We analyse the relationships between transport mode choices and the economy of different countries.\n",
+    " Also, we analyse the relationship between the investment of economic resources into infrastructure and transport safety.\n",
+    " \n",
+    "Time scale: Data is a bit limited for passenger transport, so most likely in the range of 2016-2021.\n",
+    "Geographical boundary: Countries in Europe. Not all of them have data available in the datasets, so countries with most data available will be analysed.\n",
+    " \n",
+    "A short list of how we plan to do this analysis:\n",
+    "\n",
+    "1.\tThe volume of passenger transport relative to GDP can give the relative scale of passenger transport in the national economy. Visualise it by creating an interactive map of Europe with different colors for each country based on the data, representing levels of the volume of passenger transport relative to GDP for different transport modes.\n",
     "\n",
     "2.\tExplore whether there is some correlation between the development of one mode of transportation and the state of the economy. Conduct temporal and spatial analysis using line/stacked-area charts.\n",
     "\n",
+    "3.\tFurther explore the impact of traffic investment on traffic safety. Divide European countries into low income and high income based on GDP levels. Then calculate the average of road investment and maintenance. To analyse their relevance, use a line chart to compare the trends of the investment and death of these two groups. \n",
     "\n",
-    "3.\tFurther explore the impact of traffic investment on traffic safety. Divide European countries into low income and high income based on GDP levels. Then calculate the average of road investment and maintenance. To analysis their relevance, use a line chart to compare the trends of the investment and death of these two groups. \n",
-    "\n",
-    "4.\tLook for other possible factors that could related to the road death. Such as proportions of motorways, GDP per capita, alcohol consumption. These data are likely leading to new relationships and the data possibility correlate. This problem can be done by a correlation matrix, measuring strength and quickly giving an overview of all the numerical correlations.\n",
+    "4.\tLook for other possible factors that could be related to traffic mortality rate. Such as proportions of motorways, GDP per capita, alcohol consumption. This data is likely leading to new relationships and possibly correlates. Therefore, a correlation matrix is used, measuring strength and quickly giving an overview of all the numerical correlations.\n",
     "\n",
     "5.\tTo more scientifically evaluate the relationship between traffic mortality rate and other factors, it would be better to establish a regression model. The result obtained will tell us whether there is a positive or negative relationship between them. (if we have enough time) \n",
     "\n",
-    "6.\tSummarize and propose ideas about transport pattern in the future and strategy about road safety. (Here we can back to the \"Strategic Action Plan on Road Safety\" and \"the EU road safety policy framework 2021–2030\". )"
+    "6.\tSummarize and propose ideas about transport patterns in the future and strategize about road safety. (We can make use of and compare to the \"Strategic Action Plan on Road Safety\" and \"the EU road safety policy framework 2021–2030\". )"
    ]
   },
   {
@@ -70,12 +77,18 @@
     " https://ec.europa.eu/eurostat/databrowser/view/TTR00001/default/table?lang=en\n",
     "2. Rail transport of passengers:\n",
     " https://ec.europa.eu/eurostat/databrowser/product/view/TTR00015\n",
-    "3. Road transport of passengers：\n",
+    "3. Road transport (Buses and coaches) of passengers：\n",
     " https://ec.europa.eu/eurostat/databrowser/view/ROAD_PA_BUSCOA/default/table?lang=en\n",
-    "4. GDP per capita: https://databank.worldbank.org/indicator/NY.GDP.PCAP.CD/1ff4a498/Popular-Indicators\n",
-    "5. Road injury crashes, fatalities and injuries:https://stats.oecd.org/\n",
-    "6. Transport infrastructure investment and maintenance spending: https://stats.oecd.org/\n",
-    "7. Road fatalities per one hundrend thousand inhabitant: https://stats.oecd.org/\n"
+    "4. Road transport (Passenger cars) of passengers:\n",
+    " https://ec.europa.eu/eurostat/databrowser/view/ROAD_PA_MOV/default/table?lang=en\n",
+    "5. GDP per capita: \n",
+    " https://databank.worldbank.org/indicator/NY.GDP.PCAP.CD/1ff4a498/Popular-Indicators\n",
+    "6. Road crashes, fatalities and injuries:\n",
+    " https://stats.oecd.org/\n",
+    "7. Transport infrastructure investment and maintenance spending: \n",
+    " https://stats.oecd.org/\n",
+    "8. Road fatalities per one hundred thousand inhabitants: \n",
+    " https://stats.oecd.org/\n"
    ]
   },
   {
@@ -89,15 +102,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1.\tCreate an interactive map of Europe with standard colors for each country based on The Volume of passenger transport relative to GDP, with color variations representing different levels of the Volume of passenger transport relative to GDP. A gradient color spectrum can be used so that countries with high ratios are shown in darker colors and countries with low ratios are shown in lighter colors. Add a timeline at the bottom or side of the map to represent the time range. Users can drag the timeline or click on different years to see the Volume of passenger transport relative to GDP for each country at different points in time.\n",
-    "\n",
-    "2.\tUse line/stacked-area charts to compare longitudinally the trends in each country's land passenger and train passenger traffic and the Volume of passenger transport relative to GDP over the past few years. Create grouped bar charts/scatter plots to horizontally compare land passenger and train passenger transport for each country in the same year, to understand the preference of different countries between these two modes of transportation and the relative efficiency of the transportation system.\n",
-    "\n",
-    "3.\tDesign a classification standard to divide European countries into two groups of high- and low-income countries. Calculate the average of Use a line chart to compare the trends of the investment and death of two groups. Check if they have clearly identical or opposite trends.\n",
-    "\n",
-    "4.\tTake other possible factors into consideration when analyze the safety issues. Check if the correlation between several factors is significant and perform differently or not in the two groups.\n",
-    "\n",
-    "5.\tEstablish a regression model that includes factors such as GDP and investment as target independent variables and defined a mortality rate as the dependent variable. (if we have enough time)"
+    "1. Cleaning/Filtering of data:\n",
+    " Remove entries with no data available, if necessary transform data such that it is all in the right unit.\n",
+    " Remove incomparable entries. For example, when comparing two datasets and one has additional data on other years, these cannot be compared to the other dataset and should therefore not be used.\n",
+    "2. Retrieve or obtain through calculations the required data.\n",
+    " For example, retrieve the volume of passenger transport relative to GDP and the volume of rail, bus and car transport individually.\n",
+    "3. Combine the required data in preparation for visualisation. \n",
+    " For example, combine the volumes of passenger transport into a dataframe and group it by year and countries to prepare it for visualisation.\n",
+    "4. Visualise the data, possibly interactively.\n",
+    " See description of analysis above."
    ]
   }
  ],
