--- a/project proposal.ipynb
+++ b/project proposal.ipynb
@@ -75,18 +75,25 @@
    "source": [
     "1. Volume of passenger transport relative to GDP:\n",
     " https://ec.europa.eu/eurostat/databrowser/view/TTR00001/default/table?lang=en\n",
+    "\n",
     "2. Rail transport of passengers:\n",
     " https://ec.europa.eu/eurostat/databrowser/product/view/TTR00015\n",
+    "\n",
     "3. Road transport (Buses and coaches) of passengers：\n",
     " https://ec.europa.eu/eurostat/databrowser/view/ROAD_PA_BUSCOA/default/table?lang=en\n",
+    "\n",
     "4. Road transport (Passenger cars) of passengers:\n",
     " https://ec.europa.eu/eurostat/databrowser/view/ROAD_PA_MOV/default/table?lang=en\n",
+    "\n",
     "5. GDP per capita: \n",
     " https://databank.worldbank.org/indicator/NY.GDP.PCAP.CD/1ff4a498/Popular-Indicators\n",
+    "\n",
     "6. Road crashes, fatalities and injuries:\n",
     " https://stats.oecd.org/\n",
+    "\n",
     "7. Transport infrastructure investment and maintenance spending: \n",
     " https://stats.oecd.org/\n",
+    "\n",
     "8. Road fatalities per one hundred thousand inhabitants: \n",
     " https://stats.oecd.org/\n"
    ]
@@ -105,13 +112,25 @@
     "1. Cleaning/Filtering of data:\n",
     " Remove entries with no data available, if necessary transform data such that it is all in the right unit.\n",
     " Remove incomparable entries. For example, when comparing two datasets and one has additional data on other years, these cannot be compared to the other dataset and should therefore not be used.\n",
+    "\n",
     "2. Retrieve or obtain through calculations the required data.\n",
     " For example, retrieve the volume of passenger transport relative to GDP and the volume of rail, bus and car transport individually.\n",
+    "\n",
     "3. Combine the required data in preparation for visualisation. \n",
     " For example, combine the volumes of passenger transport into a dataframe and group it by year and countries to prepare it for visualisation.\n",
+    "\n",
     "4. Visualise the data, possibly interactively.\n",
     " See description of analysis above."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
