--- a/project proposal.ipynb
+++ b/project proposal.ipynb
@@ -31,6 +31,8 @@
     "\n",
     "1.\tThe volume of passenger transport relative to GDP can give the relative scale of passenger transport in the national economy. Visualise it by creating an interactive map of Europe with different colors for each country based on the data, representing levels of the volume of passenger transport relative to GDP for different transport modes.\n",
     "\n",
+    "By analyzing the volume of rail passenger and road passenger transport ,we can find the proportion of both in the overall volume of transport. 
+Then we can discuss whether there are countries who are highly dependent on road transport, and then we select the countries who have a large proportion of road transport to analyze the relationship between GDP and traffic safety.\n",
     "2.\tExplore whether there is some correlation between the development of one mode of transportation and the state of the economy. Conduct temporal and spatial analysis using line/stacked-area charts.\n",
     "\n",
     "3.\tFurther explore the impact of traffic investment on traffic safety. Divide European countries into low income and high income based on GDP levels. Then calculate the average of road investment and maintenance. To analyse their relevance, use a line chart to compare the trends of the investment and death of these two groups. \n",
