Added header percentage road rail

--- a/Midterm-Revised.ipynb
+++ b/Midterm-Revised.ipynb
@@ -5915,6 +5915,7 @@
   {
    "cell_type": "markdown",
    "source": [
+    "# Percentage road and rail passenger kilometres\n",
     "Next, we look at the percentage of total passenger kilometres that is road (buses and coaches) and rail kilometres.\n",
     "We do this by plotting the dataframe created in part II as a bar chart with animation frames for the years."
    ],
